Attempt to fix font size of index.html heading on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,9 @@ h1 {
 }
 
 @media (min-width: 769px) {
-    
+    h1 {
+        font-size: 3.5rem;
+    }
 }
 
 @media (min-width: 1025px) {
